docs/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ANY
    BAG
    BREAK
    COMMA
    COMMENT
    CONSTANT
    ELSE
    ELSIF
    ESCALAR
    EXIT
    EXPORT
    FALSE
    FUNCTION
    HAS
    IF
    IGUAL
    IMPORT
    INTEGER
    KMARK
    LAST
    LET
    LIST
    LOOP
    MAP
    MU
    MULTI
    MY
    NEED
    NEXT
    NIL
    ONLY
    OR
    OUR
    PAIR
    PONTO
    PUSH
    REDO
    REPLICARSTRING
    REQUIRE
    RETURN
    SET
    SETA
    SPLICE
    STATE
    TIMES
    TRUE
    UNARYMINUS
    UNIT
    UNSHIFT
    USE
    WHILE
    XOR

Grammar

Rule 0     S' -> exp
Rule 1     exp -> PONTO_VIRGULA
Rule 2     exp -> exp_2
Rule 3     exp_2 -> or
Rule 4     exp_2 -> xor
Rule 5     exp_2 -> exp_3
Rule 6     or -> exp_2 OR_S exp_3
Rule 7     xor -> exp_2 XOR_S exp_3
Rule 8     exp_3 -> and
Rule 9     exp_3 -> exp_4
Rule 10    and -> exp_3 AND_S exp_4
Rule 11    exp_4 -> igual_dp
Rule 12    exp_4 -> dif
Rule 13    exp_4 -> maior
Rule 14    exp_4 -> menor
Rule 15    exp_4 -> maior_igual
Rule 16    exp_4 -> menor_igual
Rule 17    exp_4 -> smartmatch
Rule 18    exp_4 -> exp_5
Rule 19    igual_dp -> exp_4 IGUAL_DP exp_5
Rule 20    dif -> exp_4 DIF exp_5
Rule 21    maior -> exp_4 MAIOR exp_5
Rule 22    menor -> exp_4 MENOR exp_5
Rule 23    maior_igual -> exp_4 MAIOR_IGL exp_5
Rule 24    menor_igual -> exp_4 LESSEQUAL exp_5
Rule 25    smartmatch -> exp_4 SMARTMATCH exp_5
Rule 26    exp_5 -> adicao
Rule 27    exp_5 -> subtracao
Rule 28    exp_5 -> conc
Rule 29    exp_5 -> exp_6
Rule 30    adicao -> exp_5 ADC exp_6
Rule 31    subtracao -> exp_5 SUB exp_6
Rule 32    conc -> exp_5 CONC exp_6
Rule 33    exp_6 -> mult
Rule 34    exp_6 -> divide
Rule 35    exp_6 -> div
Rule 36    exp_6 -> divi
Rule 37    exp_6 -> mod
Rule 38    exp_6 -> lcm
Rule 39    exp_6 -> gcd
Rule 40    exp_6 -> exp_7
Rule 41    mult -> exp_6 MULT exp_7
Rule 42    divide -> exp_6 DIVIDE exp_7
Rule 43    div -> exp_6 DIV exp_7
Rule 44    divi -> exp_6 DIVI exp_7
Rule 45    mod -> exp_6 MOD exp_7
Rule 46    lcm -> exp_6 LCM exp_7
Rule 47    gcd -> exp_6 GCD exp_7
Rule 48    exp_7 -> pow
Rule 49    exp_7 -> exp_8
Rule 50    pow -> exp_7 POW exp_8
Rule 51    exp_8 -> not_op
Rule 52    exp_8 -> not_s
Rule 53    exp_8 -> exp_9
Rule 54    not_op -> NOT exp_8
Rule 55    not_s -> NEGAC exp_8
Rule 56    exp_9 -> unario
Rule 57    exp_9 -> operando
Rule 58    unario -> prefixo_incremento
Rule 59    unario -> posfixo_incremento
Rule 60    unario -> prefixo_decremento
Rule 61    unario -> posfixo_decremento
Rule 62    prefixo_incremento -> ADC_DP ID
Rule 63    posfixo_incremento -> ID ADC_DP
Rule 64    prefixo_decremento -> DECREMENTO ID
Rule 65    posfixo_decremento -> ID DECREMENTO
Rule 66    operando -> parenteses
Rule 67    operando -> chaves
Rule 68    operando -> tipo
Rule 69    parenteses -> LPAREN exp RPAREN
Rule 70    chaves -> ABRE_CHAVE exp FECHA_CHAVE
Rule 71    tipo -> inteiro
Rule 72    tipo -> float
Rule 73    tipo -> string
Rule 74    tipo -> boolean
Rule 75    tipo -> id
Rule 76    inteiro -> INT
Rule 77    float -> FLOAT
Rule 78    string -> STRING
Rule 79    string -> STR
Rule 80    boolean -> BOOLEAN
Rule 81    id -> ID

Terminals, with rules where they appear

ABRE_CHAVE           : 70
ADC                  : 30
ADC_DP               : 62 63
AND                  : 
AND_S                : 10
ANY                  : 
BAG                  : 
BOOLEAN              : 80
BREAK                : 
COMMA                : 
COMMENT              : 
CONC                 : 32
CONSTANT             : 
DECREMENTO           : 64 65
DIF                  : 20
DIV                  : 43
DIVI                 : 44
DIVIDE               : 42
ELSE                 : 
ELSIF                : 
ESCALAR              : 
EXIT                 : 
EXPORT               : 
FALSE                : 
FECHA_CHAVE          : 70
FLOAT                : 77
FUNCTION             : 
GCD                  : 47
HAS                  : 
ID                   : 62 63 64 65 81
IF                   : 
IGUAL                : 
IGUAL_DP             : 19
IMPORT               : 
INT                  : 76
INTEGER              : 
KMARK                : 
LAST                 : 
LCM                  : 46
LESSEQUAL            : 24
LET                  : 
LIST                 : 
LOOP                 : 
LPAREN               : 69
MAIOR                : 21
MAIOR_IGL            : 23
MAP                  : 
MENOR                : 22
MOD                  : 45
MU                   : 
MULT                 : 41
MULTI                : 
MY                   : 
NEED                 : 
NEGAC                : 55
NEXT                 : 
NIL                  : 
NOT                  : 54
ONLY                 : 
OR                   : 
OR_S                 : 6
OUR                  : 
PAIR                 : 
PONTO                : 
PONTO_VIRGULA        : 1
POW                  : 50
PUSH                 : 
REDO                 : 
REPLICARSTRING       : 
REQUIRE              : 
RETURN               : 
RPAREN               : 69
SET                  : 
SETA                 : 
SMARTMATCH           : 25
SPLICE               : 
STATE                : 
STR                  : 79
STRING               : 78
SUB                  : 31
TIMES                : 
TRUE                 : 
UNARYMINUS           : 
UNIT                 : 
UNSHIFT              : 
USE                  : 
WHILE                : 
XOR                  : 
XOR_S                : 7
error                : 

Nonterminals, with rules where they appear

adicao               : 26
and                  : 8
boolean              : 74
chaves               : 67
conc                 : 28
dif                  : 12
div                  : 35
divi                 : 36
divide               : 34
exp                  : 69 70 0
exp_2                : 2 6 7
exp_3                : 5 6 7 10
exp_4                : 9 10 19 20 21 22 23 24 25
exp_5                : 18 19 20 21 22 23 24 25 30 31 32
exp_6                : 29 30 31 32 41 42 43 44 45 46 47
exp_7                : 40 41 42 43 44 45 46 47 50
exp_8                : 49 50 54 55
exp_9                : 53
float                : 72
gcd                  : 39
id                   : 75
igual_dp             : 11
inteiro              : 71
lcm                  : 38
maior                : 13
maior_igual          : 15
menor                : 14
menor_igual          : 16
mod                  : 37
mult                 : 33
not_op               : 51
not_s                : 52
operando             : 57
or                   : 3
parenteses           : 66
posfixo_decremento   : 61
posfixo_incremento   : 59
pow                  : 48
prefixo_decremento   : 60
prefixo_incremento   : 58
smartmatch           : 17
string               : 73
subtracao            : 27
tipo                 : 68
unario               : 56
xor                  : 4

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . PONTO_VIRGULA
    (2) exp -> . exp_2
    (3) exp_2 -> . or
    (4) exp_2 -> . xor
    (5) exp_2 -> . exp_3
    (6) or -> . exp_2 OR_S exp_3
    (7) xor -> . exp_2 XOR_S exp_3
    (8) exp_3 -> . and
    (9) exp_3 -> . exp_4
    (10) and -> . exp_3 AND_S exp_4
    (11) exp_4 -> . igual_dp
    (12) exp_4 -> . dif
    (13) exp_4 -> . maior
    (14) exp_4 -> . menor
    (15) exp_4 -> . maior_igual
    (16) exp_4 -> . menor_igual
    (17) exp_4 -> . smartmatch
    (18) exp_4 -> . exp_5
    (19) igual_dp -> . exp_4 IGUAL_DP exp_5
    (20) dif -> . exp_4 DIF exp_5
    (21) maior -> . exp_4 MAIOR exp_5
    (22) menor -> . exp_4 MENOR exp_5
    (23) maior_igual -> . exp_4 MAIOR_IGL exp_5
    (24) menor_igual -> . exp_4 LESSEQUAL exp_5
    (25) smartmatch -> . exp_4 SMARTMATCH exp_5
    (26) exp_5 -> . adicao
    (27) exp_5 -> . subtracao
    (28) exp_5 -> . conc
    (29) exp_5 -> . exp_6
    (30) adicao -> . exp_5 ADC exp_6
    (31) subtracao -> . exp_5 SUB exp_6
    (32) conc -> . exp_5 CONC exp_6
    (33) exp_6 -> . mult
    (34) exp_6 -> . divide
    (35) exp_6 -> . div
    (36) exp_6 -> . divi
    (37) exp_6 -> . mod
    (38) exp_6 -> . lcm
    (39) exp_6 -> . gcd
    (40) exp_6 -> . exp_7
    (41) mult -> . exp_6 MULT exp_7
    (42) divide -> . exp_6 DIVIDE exp_7
    (43) div -> . exp_6 DIV exp_7
    (44) divi -> . exp_6 DIVI exp_7
    (45) mod -> . exp_6 MOD exp_7
    (46) lcm -> . exp_6 LCM exp_7
    (47) gcd -> . exp_6 GCD exp_7
    (48) exp_7 -> . pow
    (49) exp_7 -> . exp_8
    (50) pow -> . exp_7 POW exp_8
    (51) exp_8 -> . not_op
    (52) exp_8 -> . not_s
    (53) exp_8 -> . exp_9
    (54) not_op -> . NOT exp_8
    (55) not_s -> . NEGAC exp_8
    (56) exp_9 -> . unario
    (57) exp_9 -> . operando
    (58) unario -> . prefixo_incremento
    (59) unario -> . posfixo_incremento
    (60) unario -> . prefixo_decremento
    (61) unario -> . posfixo_decremento
    (66) operando -> . parenteses
    (67) operando -> . chaves
    (68) operando -> . tipo
    (62) prefixo_incremento -> . ADC_DP ID
    (63) posfixo_incremento -> . ID ADC_DP
    (64) prefixo_decremento -> . DECREMENTO ID
    (65) posfixo_decremento -> . ID DECREMENTO
    (69) parenteses -> . LPAREN exp RPAREN
    (70) chaves -> . ABRE_CHAVE exp FECHA_CHAVE
    (71) tipo -> . inteiro
    (72) tipo -> . float
    (73) tipo -> . string
    (74) tipo -> . boolean
    (75) tipo -> . id
    (76) inteiro -> . INT
    (77) float -> . FLOAT
    (78) string -> . STRING
    (79) string -> . STR
    (80) boolean -> . BOOLEAN
    (81) id -> . ID

    PONTO_VIRGULA   shift and go to state 2
    NOT             shift and go to state 34
    NEGAC           shift and go to state 35
    ADC_DP          shift and go to state 45
    ID              shift and go to state 46
    DECREMENTO      shift and go to state 47
    LPAREN          shift and go to state 48
    ABRE_CHAVE      shift and go to state 49
    INT             shift and go to state 55
    FLOAT           shift and go to state 56
    STRING          shift and go to state 57
    STR             shift and go to state 58
    BOOLEAN         shift and go to state 59

    exp                            shift and go to state 1
    exp_2                          shift and go to state 3
    or                             shift and go to state 4
    xor                            shift and go to state 5
    exp_3                          shift and go to state 6
    and                            shift and go to state 7
    exp_4                          shift and go to state 8
    igual_dp                       shift and go to state 9
    dif                            shift and go to state 10
    maior                          shift and go to state 11
    menor                          shift and go to state 12
    maior_igual                    shift and go to state 13
    menor_igual                    shift and go to state 14
    smartmatch                     shift and go to state 15
    exp_5                          shift and go to state 16
    adicao                         shift and go to state 17
    subtracao                      shift and go to state 18
    conc                           shift and go to state 19
    exp_6                          shift and go to state 20
    mult                           shift and go to state 21
    divide                         shift and go to state 22
    div                            shift and go to state 23
    divi                           shift and go to state 24
    mod                            shift and go to state 25
    lcm                            shift and go to state 26
    gcd                            shift and go to state 27
    exp_7                          shift and go to state 28
    pow                            shift and go to state 29
    exp_8                          shift and go to state 30
    not_op                         shift and go to state 31
    not_s                          shift and go to state 32
    exp_9                          shift and go to state 33
    unario                         shift and go to state 36
    operando                       shift and go to state 37
    prefixo_incremento             shift and go to state 38
    posfixo_incremento             shift and go to state 39
    prefixo_decremento             shift and go to state 40
    posfixo_decremento             shift and go to state 41
    parenteses                     shift and go to state 42
    chaves                         shift and go to state 43
    tipo                           shift and go to state 44
    inteiro                        shift and go to state 50
    float                          shift and go to state 51
    string                         shift and go to state 52
    boolean                        shift and go to state 53
    id                             shift and go to state 54

state 1

    (0) S' -> exp .



state 2

    (1) exp -> PONTO_VIRGULA .

    $end            reduce using rule 1 (exp -> PONTO_VIRGULA .)
    RPAREN          reduce using rule 1 (exp -> PONTO_VIRGULA .)
    FECHA_CHAVE     reduce using rule 1 (exp -> PONTO_VIRGULA .)


state 3

    (2) exp -> exp_2 .
    (6) or -> exp_2 . OR_S exp_3
    (7) xor -> exp_2 . XOR_S exp_3

    $end            reduce using rule 2 (exp -> exp_2 .)
    RPAREN          reduce using rule 2 (exp -> exp_2 .)
    FECHA_CHAVE     reduce using rule 2 (exp -> exp_2 .)
    OR_S            shift and go to state 60
    XOR_S           shift and go to state 61


state 4

    (3) exp_2 -> or .

    OR_S            reduce using rule 3 (exp_2 -> or .)
    XOR_S           reduce using rule 3 (exp_2 -> or .)
    $end            reduce using rule 3 (exp_2 -> or .)
    RPAREN          reduce using rule 3 (exp_2 -> or .)
    FECHA_CHAVE     reduce using rule 3 (exp_2 -> or .)


state 5

    (4) exp_2 -> xor .

    OR_S            reduce using rule 4 (exp_2 -> xor .)
    XOR_S           reduce using rule 4 (exp_2 -> xor .)
    $end            reduce using rule 4 (exp_2 -> xor .)
    RPAREN          reduce using rule 4 (exp_2 -> xor .)
    FECHA_CHAVE     reduce using rule 4 (exp_2 -> xor .)


state 6

    (5) exp_2 -> exp_3 .
    (10) and -> exp_3 . AND_S exp_4

    OR_S            reduce using rule 5 (exp_2 -> exp_3 .)
    XOR_S           reduce using rule 5 (exp_2 -> exp_3 .)
    $end            reduce using rule 5 (exp_2 -> exp_3 .)
    RPAREN          reduce using rule 5 (exp_2 -> exp_3 .)
    FECHA_CHAVE     reduce using rule 5 (exp_2 -> exp_3 .)
    AND_S           shift and go to state 62


state 7

    (8) exp_3 -> and .

    AND_S           reduce using rule 8 (exp_3 -> and .)
    OR_S            reduce using rule 8 (exp_3 -> and .)
    XOR_S           reduce using rule 8 (exp_3 -> and .)
    $end            reduce using rule 8 (exp_3 -> and .)
    RPAREN          reduce using rule 8 (exp_3 -> and .)
    FECHA_CHAVE     reduce using rule 8 (exp_3 -> and .)


state 8

    (9) exp_3 -> exp_4 .
    (19) igual_dp -> exp_4 . IGUAL_DP exp_5
    (20) dif -> exp_4 . DIF exp_5
    (21) maior -> exp_4 . MAIOR exp_5
    (22) menor -> exp_4 . MENOR exp_5
    (23) maior_igual -> exp_4 . MAIOR_IGL exp_5
    (24) menor_igual -> exp_4 . LESSEQUAL exp_5
    (25) smartmatch -> exp_4 . SMARTMATCH exp_5

    AND_S           reduce using rule 9 (exp_3 -> exp_4 .)
    OR_S            reduce using rule 9 (exp_3 -> exp_4 .)
    XOR_S           reduce using rule 9 (exp_3 -> exp_4 .)
    $end            reduce using rule 9 (exp_3 -> exp_4 .)
    RPAREN          reduce using rule 9 (exp_3 -> exp_4 .)
    FECHA_CHAVE     reduce using rule 9 (exp_3 -> exp_4 .)
    IGUAL_DP        shift and go to state 63
    DIF             shift and go to state 64
    MAIOR           shift and go to state 65
    MENOR           shift and go to state 66
    MAIOR_IGL       shift and go to state 67
    LESSEQUAL       shift and go to state 68
    SMARTMATCH      shift and go to state 69


state 9

    (11) exp_4 -> igual_dp .

    IGUAL_DP        reduce using rule 11 (exp_4 -> igual_dp .)
    DIF             reduce using rule 11 (exp_4 -> igual_dp .)
    MAIOR           reduce using rule 11 (exp_4 -> igual_dp .)
    MENOR           reduce using rule 11 (exp_4 -> igual_dp .)
    MAIOR_IGL       reduce using rule 11 (exp_4 -> igual_dp .)
    LESSEQUAL       reduce using rule 11 (exp_4 -> igual_dp .)
    SMARTMATCH      reduce using rule 11 (exp_4 -> igual_dp .)
    AND_S           reduce using rule 11 (exp_4 -> igual_dp .)
    OR_S            reduce using rule 11 (exp_4 -> igual_dp .)
    XOR_S           reduce using rule 11 (exp_4 -> igual_dp .)
    $end            reduce using rule 11 (exp_4 -> igual_dp .)
    RPAREN          reduce using rule 11 (exp_4 -> igual_dp .)
    FECHA_CHAVE     reduce using rule 11 (exp_4 -> igual_dp .)


state 10

    (12) exp_4 -> dif .

    IGUAL_DP        reduce using rule 12 (exp_4 -> dif .)
    DIF             reduce using rule 12 (exp_4 -> dif .)
    MAIOR           reduce using rule 12 (exp_4 -> dif .)
    MENOR           reduce using rule 12 (exp_4 -> dif .)
    MAIOR_IGL       reduce using rule 12 (exp_4 -> dif .)
    LESSEQUAL       reduce using rule 12 (exp_4 -> dif .)
    SMARTMATCH      reduce using rule 12 (exp_4 -> dif .)
    AND_S           reduce using rule 12 (exp_4 -> dif .)
    OR_S            reduce using rule 12 (exp_4 -> dif .)
    XOR_S           reduce using rule 12 (exp_4 -> dif .)
    $end            reduce using rule 12 (exp_4 -> dif .)
    RPAREN          reduce using rule 12 (exp_4 -> dif .)
    FECHA_CHAVE     reduce using rule 12 (exp_4 -> dif .)


state 11

    (13) exp_4 -> maior .

    IGUAL_DP        reduce using rule 13 (exp_4 -> maior .)
    DIF             reduce using rule 13 (exp_4 -> maior .)
    MAIOR           reduce using rule 13 (exp_4 -> maior .)
    MENOR           reduce using rule 13 (exp_4 -> maior .)
    MAIOR_IGL       reduce using rule 13 (exp_4 -> maior .)
    LESSEQUAL       reduce using rule 13 (exp_4 -> maior .)
    SMARTMATCH      reduce using rule 13 (exp_4 -> maior .)
    AND_S           reduce using rule 13 (exp_4 -> maior .)
    OR_S            reduce using rule 13 (exp_4 -> maior .)
    XOR_S           reduce using rule 13 (exp_4 -> maior .)
    $end            reduce using rule 13 (exp_4 -> maior .)
    RPAREN          reduce using rule 13 (exp_4 -> maior .)
    FECHA_CHAVE     reduce using rule 13 (exp_4 -> maior .)


state 12

    (14) exp_4 -> menor .

    IGUAL_DP        reduce using rule 14 (exp_4 -> menor .)
    DIF             reduce using rule 14 (exp_4 -> menor .)
    MAIOR           reduce using rule 14 (exp_4 -> menor .)
    MENOR           reduce using rule 14 (exp_4 -> menor .)
    MAIOR_IGL       reduce using rule 14 (exp_4 -> menor .)
    LESSEQUAL       reduce using rule 14 (exp_4 -> menor .)
    SMARTMATCH      reduce using rule 14 (exp_4 -> menor .)
    AND_S           reduce using rule 14 (exp_4 -> menor .)
    OR_S            reduce using rule 14 (exp_4 -> menor .)
    XOR_S           reduce using rule 14 (exp_4 -> menor .)
    $end            reduce using rule 14 (exp_4 -> menor .)
    RPAREN          reduce using rule 14 (exp_4 -> menor .)
    FECHA_CHAVE     reduce using rule 14 (exp_4 -> menor .)


state 13

    (15) exp_4 -> maior_igual .

    IGUAL_DP        reduce using rule 15 (exp_4 -> maior_igual .)
    DIF             reduce using rule 15 (exp_4 -> maior_igual .)
    MAIOR           reduce using rule 15 (exp_4 -> maior_igual .)
    MENOR           reduce using rule 15 (exp_4 -> maior_igual .)
    MAIOR_IGL       reduce using rule 15 (exp_4 -> maior_igual .)
    LESSEQUAL       reduce using rule 15 (exp_4 -> maior_igual .)
    SMARTMATCH      reduce using rule 15 (exp_4 -> maior_igual .)
    AND_S           reduce using rule 15 (exp_4 -> maior_igual .)
    OR_S            reduce using rule 15 (exp_4 -> maior_igual .)
    XOR_S           reduce using rule 15 (exp_4 -> maior_igual .)
    $end            reduce using rule 15 (exp_4 -> maior_igual .)
    RPAREN          reduce using rule 15 (exp_4 -> maior_igual .)
    FECHA_CHAVE     reduce using rule 15 (exp_4 -> maior_igual .)


state 14

    (16) exp_4 -> menor_igual .

    IGUAL_DP        reduce using rule 16 (exp_4 -> menor_igual .)
    DIF             reduce using rule 16 (exp_4 -> menor_igual .)
    MAIOR           reduce using rule 16 (exp_4 -> menor_igual .)
    MENOR           reduce using rule 16 (exp_4 -> menor_igual .)
    MAIOR_IGL       reduce using rule 16 (exp_4 -> menor_igual .)
    LESSEQUAL       reduce using rule 16 (exp_4 -> menor_igual .)
    SMARTMATCH      reduce using rule 16 (exp_4 -> menor_igual .)
    AND_S           reduce using rule 16 (exp_4 -> menor_igual .)
    OR_S            reduce using rule 16 (exp_4 -> menor_igual .)
    XOR_S           reduce using rule 16 (exp_4 -> menor_igual .)
    $end            reduce using rule 16 (exp_4 -> menor_igual .)
    RPAREN          reduce using rule 16 (exp_4 -> menor_igual .)
    FECHA_CHAVE     reduce using rule 16 (exp_4 -> menor_igual .)


state 15

    (17) exp_4 -> smartmatch .
